syntax = "proto3";

package example;
option go_package = "./example;example";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}


service StrategyPool {
    rpc InitStrategyPool (InitStrategyRequest) returns (InitStrategyResponse) {}
}

message InitStrategyRequest {
    string name = 1;
}

message InitStrategyResponse {
    string message = 1;
}